# component-airtable-writer

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
src/: client_airtable.py  client_storage.py  component.py  configuration.py  utils.py
tests/: test_component.py
