[project]
name = "airtable"
dynamic = ["version"]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "freezegun>=1.5.1",
    "keboola-component>=1.6.10",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "pydantic>=2.11.3",
    "pyairtable>=3.2.0",
]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | data
)/
'''

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ruff>=0.13.3",
]
